--- a/pages/bodas.html
+++ b/pages/bodas.html
@@ -156,11 +156,11 @@
           </article>
         </section>
 
-        <section class="galeria"> <!-- boda 1 -->
+        <section class="galeria"> <!-- boda 2-->
          <div class="galeria2">
-            <a href="#image2"> <img class="caru altMid" src="../img/boda11.jpg" alt="promosiones pizzas"></a>
-            <a href="#image7"> <img class="caru" src="../img/boda12.jpg" alt="promosiones pizzas"></a>
-            <a href="#image7"> <img class="caru" src="../img/boda13.jpg" alt="promosiones pizzas"></a>
+            <a href="#image11"> <img class="caru altMid" src="../img/boda11.jpg" alt="promosiones pizzas"></a>
+            <a href="#image12"> <img class="caru" src="../img/boda12.jpg" alt="promosiones pizzas"></a>
+            <a href="#image13"> <img class="caru" src="../img/boda13.jpg" alt="promosiones pizzas"></a>
           </div>         
         </section>
     
@@ -171,11 +171,25 @@
           <a href="#vuelta1" class="close">X</a>
         </article>
 
-        <section class="galeria"> <!-- boda 1 -->
+        <article class="light-box" id="image1">
+          <a href="#image5" class="next"><i class="fa-solid fa-arrow-left"></i></i></a>
+          <img class="caru" src="../img/boda1.jpg" alt="promociones pizzas">
+          <a href="#image2" class="next"><i class="fa-solid fa-arrow-right"></i></a>
+          <a href="#vuelta1" class="close">X</a>
+        </article>
+
+        <article class="light-box" id="image1">
+          <a href="#image5" class="next"><i class="fa-solid fa-arrow-left"></i></i></a>
+          <img class="caru" src="../img/boda1.jpg" alt="promociones pizzas">
+          <a href="#image2" class="next"><i class="fa-solid fa-arrow-right"></i></a>
+          <a href="#vuelta1" class="close">X</a>
+        </article>
+
+        <section class="galeria"> <!-- boda 3 -->
           <div class="galeria2">
-             <a href="#image2"> <img class="caru altMid" src="../img/boda14.jpg" alt="promosiones pizzas"></a>
-             <a href="#image7"> <img class="caru" src="../img/boda15.jpg" alt="promosiones pizzas"></a>
-             <a href="#image7"> <img class="caru" src="../img/boda16.jpg" alt="promosiones pizzas"></a>
+             <a href="#image14"> <img class="caru altMid" src="../img/boda14.jpg" alt="promosiones pizzas"></a>
+             <a href="#image15"> <img class="caru" src="../img/boda15.jpg" alt="promosiones pizzas"></a>
+             <a href="#image16"> <img class="caru" src="../img/boda16.jpg" alt="promosiones pizzas"></a>
            </div>         
          </section>
      
@@ -185,6 +199,20 @@
            <a href="#image2" class="next"><i class="fa-solid fa-arrow-right"></i></a>
            <a href="#vuelta1" class="close">X</a>
          </article>
+
+         <article class="light-box" id="image1">
+          <a href="#image5" class="next"><i class="fa-solid fa-arrow-left"></i></i></a>
+          <img class="caru" src="../img/boda1.jpg" alt="promociones pizzas">
+          <a href="#image2" class="next"><i class="fa-solid fa-arrow-right"></i></a>
+          <a href="#vuelta1" class="close">X</a>
+        </article>
+
+        <article class="light-box" id="image1">
+          <a href="#image5" class="next"><i class="fa-solid fa-arrow-left"></i></i></a>
+          <img class="caru" src="../img/boda1.jpg" alt="promociones pizzas">
+          <a href="#image2" class="next"><i class="fa-solid fa-arrow-right"></i></a>
+          <a href="#vuelta1" class="close">X</a>
+        </article>
 
       </article>
 
